--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -2,7 +2,7 @@ html.play=PLAY
 
 game.menu=Menu
 game.settings=Settings
-game.time=Time
+game.time=Time: {0}s/{1}s
 game.time-over=TIME OVER
 game.game-over=YOU DIED
 
