--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -5,6 +5,10 @@ game.settings=Settings
 game.time=Time: {0}s/{1}s
 game.time-over=TIME OVER
 game.game-over=YOU DIED
+game.blue-victory=[#00ffde]MISSION COMPLETED
+game.red-victory=[#ff51f9]MISSION COMPLETED
+game.victory=MISSION COMPLETED
+game.victory-menu=Menu
 
 menu.start=START
 menu.exit=EXIT
