Add texts of monsters

--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -1,5 +1,8 @@
 html.play=PLAY
 
+game.scientist=[#00ffd9]WHAT THE FUCK\nARE YOU DOING HERE?![]
+game.drug-dealer=[#00ffd9]HEY, [#49d04c]DUDE[], TAKE\nSOME STUFF[]
+game.drug-dealer-aggressive=[#00ffd9]HEY, [#e6243c]DUDE[], TAKE\nSOME STUFF[]
 game.menu=Menu
 game.settings=Settings
 game.time=Time: {0}s/{1}s
