Add tutorial screen

--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -14,4 +14,17 @@ game.victory=MISSION COMPLETED
 game.victory-menu=Menu
 
 menu.start=START
+menu.tutorial=HOW TO PLAY
 menu.exit=EXIT
+
+tutorial.tutorial=How to Play
+tutorial.page0=Movement
+tutorial.page1=Attack
+tutorial.page2=Item switching
+tutorial.page3=Timescale
+tutorial.description0=Move and jump using these keys. Use 'S' to land during jump
+tutorial.description1=Kill enemies and dodge their attacks(Except some special enemies)
+tutorial.description2=Choose weapon to attack with(Katana or time mine) using regular attack button
+tutorial.description3=Each time you move or attack you spend your time. You can get more time FOR THE NEXT RESPAWN by killing enemies.
+tutorial.back=Back
+tutorial.next=Next
