--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -28,3 +28,7 @@ tutorial.description2=Choose weapon to attack with(Katana or time mine) using re
 tutorial.description3=Each time you move or attack you spend your time. You can get more time FOR THE NEXT RESPAWN by killing enemies.
 tutorial.back=Back
 tutorial.next=Next
+
+story.story0=[#eeeeee]We are happy to show you our [#eb5433]Ludum[] [#f18e23]dare[] project, which we made in 72 hours...[]
+story.story1=[#eeeeee][#eb5433]Ninja[]... he has his [#f18e23]own way[]... only if someone won't pay him to channge it and complete some tasks...[]
+story.story2=[#eeeeee]Once [#eb5433]scientists from future[] made a portal in our time, causing [#f18e23]time instability[]. [#eb5433]Our ninja[] has to confront them and [#f18e23]close the portal[].[]
