--- a/android/assets/bundle/bundle_en.properties
+++ b/android/assets/bundle/bundle_en.properties
@@ -15,6 +15,7 @@ game.victory-menu=Menu
 
 menu.start=START
 menu.tutorial=HOW TO PLAY
+menu.settings=SETTINGS
 menu.exit=EXIT
 
 tutorial.tutorial=How to Play
@@ -32,3 +33,10 @@ tutorial.next=Next
 story.story0=[#eeeeee]We are happy to show you our [#eb5433]Ludum[] [#f18e23]dare[] project, which we made in 72 hours...[]
 story.story1=[#eeeeee][#eb5433]Ninja[]... he has his [#f18e23]own way[]... only if someone won't pay him to change it and complete some tasks...[]
 story.story2=[#eeeeee]Once [#eb5433]scientists from future[] made a portal in our time, causing [#f18e23]time instability[]. [#eb5433]Our ninja[] has to confront them and [#f18e23]close the portal[].[]
+
+settings.settings=Settings
+settings.sound=Sounds
+settings.music=Music
+settings.language=Language
+settings.back=Back
+settings.accept=Accept
